[package]
edition = "2021"
name = "bambi-browser"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "b05cd77", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "b05cd77", features = ["nightly"] }
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "b05cd77", features = ["time-driver-rtc1", "gpiote", "nightly", "nrf52840", "unstable-pac"] }

# Debugging using a probe
defmt = { version = "0.3.0", optional = true }
defmt-rtt = { version = "0.3.0", optional = true }
panic-probe = { version = "0.3.1", features = ["print-defmt"], optional = true }
# Debugging using usb
log = { version = "0.4.17", optional = true }
# https://github.com/embassy-rs/embassy/pull/1060/files
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", optional = true }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
alloc-cortex-m = "0.4.3"

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
]
log = [
    "dep:log",
    "dep:embassy-usb-logger"
]